# maa-mgr

./: .gitignore  LICENSE  README.md  pyproject.toml
EXAMPLES/: 1999_CN_TASK.json  1999_EN_TASK.json  arknights.bat  arknights.ps1  full.bat  full.ps1  re1999_cn.bat  re1999_cn.ps1  re1999_en.bat  re1999_en.ps1
src/maamgr/: __main__.py  core.py  utils.py
