[project]
name = "maa-mgr"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "cel-ti", email = "96926560+cel-ti@users.noreply.github.com" }
]
dependencies = [
    "click>=8.1.8",
    "zuu[app] @ git+https://github.com/zwtil/zuu2.git#subdirectory=PYTHON_PKG/std",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
maamgr = "maamgr.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/maamgr"]
